force-app/main/default/objects/Apttus_AgreementSummary__c/Apttus_AgreementSummary__c.object-meta.xml
<CustomObject>
    <description>Shring only limited set of information on the agreement</description>
    <label>Agreement Summary</label>
    <nameField>
        <label>Agreement number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>