force-app/main/default/objects/Apttus_AgreementSummary__c/fields/chk_Perpetual__c.field-meta.xml
<CustomField>
    <fullName>chk_Perpetual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perpetual</description>
    <label>Perpetual</label>
    <type>Checkbox</type>
</CustomField>