force-app/main/default/objects/Apttus_AgreementSummary__c/fields/dat_AgreementEndDate__c.field-meta.xml
<CustomField>
    <fullName>dat_AgreementEndDate__c</fullName>
    <description>Agreement End Date</description>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>