force-app/main/default/objects/Apttus_AgreementSummary__c/fields/dat_AgreementStartDate__c.field-meta.xml
<CustomField>
    <fullName>dat_AgreementStartDate__c</fullName>
    <description>Agreement Start Date</description>
    <label>Agreement Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>