force-app/main/default/objects/Apttus_AgreementSummary__c/fields/lkp_Account__c.field-meta.xml
<CustomField>
    <fullName>lkp_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements Summary</relationshipLabel>
    <relationshipName>Agreements_Summary</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>