force-app/main/default/objects/Apttus_AgreementSummary__c/fields/lkp_AgreementID__c.field-meta.xml
<CustomField>
    <fullName>lkp_AgreementID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the Agreement record</description>
    <label>Agreement ID</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipName>Agreements_summary</relationshipName>
    <type>Lookup</type>
</CustomField>