force-app/main/default/objects/Apttus_AgreementSummary__c/fields/lkp_PrimaryETASLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>lkp_PrimaryETASLegalEntity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Primary ETAS Legal Entity</description>
    <label>Primary ETAS Legal Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements Summary (Primary ETAS Legal Entity)</relationshipLabel>
    <relationshipName>Agreements_Summary1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>