force-app/main/default/objects/Apttus_AgreementSummary__c/fields/pkl_AgreementCategory__c.field-meta.xml
<CustomField>
    <fullName>pkl_AgreementCategory__c</fullName>
    <description>Agreement Category</description>
    <label>Agreement Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Sales DE</fullName>
                <label>ETAS/CDE</label>
            </value>
            <value>
                <fullName>ETAS/CRB-XA</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>