force-app/main/default/objects/Apttus_AgreementSummary__c/fields/pkl_Status__c.field-meta.xml
<CustomField>
    <fullName>pkl_Status__c</fullName>
    <description>Status of the Agreement</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Being Amended</fullName>
            </value>
            <value>
                <fullName>Being Renewed</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>