force-app/main/default/objects/Apttus_AgreementSummary__c/fields/pkl_StatusCategory__c.field-meta.xml
<CustomField>
    <fullName>pkl_StatusCategory__c</fullName>
    <description>Status Category</description>
    <label>Status Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Effect</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>