force-app/main/default/objects/Apttus_AgreementSummary__c/fields/txl_Description__c.field-meta.xml
<CustomField>
    <fullName>txl_Description__c</fullName>
    <description>Description</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>