force-app/main/default/objects/Apttus_AgreementSummary__c/fields/txt_Owner__c.field-meta.xml
<CustomField>
    <fullName>txt_Owner__c</fullName>
    <description>Owner</description>
    <label>Owner</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>